ML4W + my custom configs

--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
 folder = /usr/share/backgrounds
-wallpaper = /usr/share/backgrounds/sungarden.png
+wallpaper = /usr/share/backgrounds/mocha.jpg
 backend = hyprpaper
 monitors = All
 fill = fill
