--- a/.config/waybar/themes/ml4w/config
+++ b/.config/waybar/themes/ml4w/config
@@ -11,7 +11,7 @@
 {
     // General Settings
     "layer": "top",
-    "margin-top": 5,
+    "margin-top": 14,
     "margin-bottom": 0,
     "margin-left": 14,
     "margin-right": 14,    
@@ -27,7 +27,7 @@
     "modules-left": [
 "custom/appmenu",
         "group/links",
-//"wlr/taskbar",
+"wlr/taskbar",
         "group/quicklinks",
 "hyprland/window",
         "custom/empty"
