--- a/.config/hypr/conf/keybindings/default.conf
+++ b/.config/hypr/conf/keybindings/default.conf
@@ -9,7 +9,7 @@ $HYPRSCRIPTS = ~/.config/hypr/scripts
 $SCRIPTS = ~/.config/ml4w/scripts
 
 # Applications
-bind = $mainMod, T, exec, ~/.config/ml4w/settings/terminal.sh    # Open the terminal
+bind = $mainMod, K, exec, ~/.config/ml4w/settings/terminal.sh    # Open the terminal
 bind = $mainMod, B, exec, ~/.config/ml4w/settings/browser.sh          # Open the browser
 bind = $mainMod, E, exec, ~/.config/ml4w/settings/filemanager.sh      # Open the filemanager
 bind = $mainMod, S, exec, logseq
