ML4W + my custom configs

--- a/.config/waypaper/config.ini
+++ b/.config/waypaper/config.ini
@@ -1,7 +1,7 @@
 [Settings]
 language = en
-folder = ~/Documents/wallpapers
-wallpaper = ~/Documents/wallpapers/sad-aesthetic-planets-over-alien-xqvv0wh5ns7ljfz7-3683018559.jpg
+folder = ~/Pictures/wallpapers
+wallpaper = ~/Pictures/wallpapers/sad-aesthetic-planets-over-alien-xqvv0wh5ns7ljfz7-3683018559.jpg
 backend = hyprpaper
 monitors = All
 fill = fill
