--- a/.config/xsettingsd/xsettingsd.conf
+++ b/.config/xsettingsd/xsettingsd.conf
@@ -1,4 +1,4 @@
-Net/ThemeName "Adwaita-dark"
+Net/ThemeName "Orchis-Grey-Dark"
 Net/IconThemeName "Nordic-Folders-Bluish"
 Gtk/CursorThemeName "Bibata"
 Net/EnableEventSounds 0
