--- a/.config/hypr/conf/keybindings/default.conf
+++ b/.config/hypr/conf/keybindings/default.conf
@@ -12,7 +12,7 @@ $SCRIPTS = ~/.config/ml4w/scripts
 bind = $mainMod, K, exec, ~/.config/ml4w/settings/terminal.sh    # Open the terminal
 bind = $mainMod, B, exec, ~/.config/ml4w/settings/browser.sh          # Open the browser
 bind = $mainMod, E, exec, ~/.config/ml4w/settings/filemanager.sh      # Open the filemanager
-bind = $mainMod, S, exec, logseq
+bind = $mainMod, N, exec, obsidian
 bind = $mainMod CTRL, E, exec, ~/.config/ml4w/settings/emojipicker.sh # Open the emoji picker
 bind = $mainMod CTRL, C, exec, ~/.config/ml4w/settings/calculator.sh  # Open the calculator
 # bind = $mainMod M, exec, spotify-launcher  # Open Spotify
